--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,102 @@ body{
   background-color: #161615;
   color: white;
 }
+
+.toggle-indicator {
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  height: calc(100% - 8px);
+  width: 85px;
+  border-radius: 9999px;
+  background-color: #3f3f46; 
+  transition: transform 0.3s ease;
+  z-index: 0;
+}
+
+.toggle-indicator.sun {
+  transform: translateX(92px);
+}
+
+.toggle-indicator.moon {
+  transform: translateX(160px);
+}
+
+.toggle-indicator.auto {
+  transform: translateX(0);
+}
+
+/* in index.css or App.css */
+.custom-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #52525b; /* zinc-600 */
+  border-radius: 4px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background-color: #27272a; /* zinc-800 */
+}
+
+
+@media (min-width:320px){
+  .toggle-indicator {
+  top: 4px;
+  left: 4px;
+  height: calc(100% - 8px);
+  width: 55px;
+}
+
+.toggle-indicator.sun {
+  transform: translateX(55px);
+}
+
+.toggle-indicator.moon {
+  transform: translateX(99px);
+}
+
+.toggle-indicator.auto {
+  transform: translateX(0);
+}
+}
+
+@media (min-width:1280px){
+  .toggle-indicator {
+  position: absolute;
+  width: 83px;
+}
+
+.toggle-indicator.sun {
+  transform: translateX(88px);
+}
+
+.toggle-indicator.moon {
+  transform: translateX(164px);
+}
+
+.toggle-indicator.auto {
+  transform: translateX(0);
+}
+}
+
+
+@media (min-width:1440px){
+  .toggle-indicator {
+  width: 80px;
+
+}
+
+.toggle-indicator.sun {
+  transform: translateX(88px);
+}
+
+.toggle-indicator.moon {
+  transform: translateX(166px);
+}
+
+.toggle-indicator.auto {
+  transform: translateX(0);
+}
+}
